# darmstadt

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  audio.cpp  cache.cpp  darmstadt.h  darmstadt.kdev4  eglcommon.h  hesse.md  jack.cpp  main.cpp  portfunc.cpp  pulse.cpp  roadmap.md  string.cpp  time.cpp
imgui/backends/: imgui_impl_opengl3.cpp
